@@ -6,6 +6,7 @@ Unmerdify alpha support (by Vincent Jousse):
 - if "ftr_site_config" is set, unmerdify will be enabled instead of readabilty in "ansicat"
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
+- support for new links color in gopher (by JMCS)
 
 ## 2.8 - November 13th 2025
 - New option "images_size" to use with "set" (idea by aelius)
